--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.9.7",
     "nodemon": "^3.1.0",
+    "path": "^0.12.7",
+    "unzipper": "^0.11.6",
     "uuid": "^9.0.1"
   }
 }
